Task 0 - Fixing flickering

--- a/src/styles.css
+++ b/src/styles.css
@@ -259,6 +259,10 @@
   -webkit-backface-visibility: hidden;
 }
 
+.no_flickering {
+  -webkit-backface-visibility: hidden;
+}
+
 .text_color__darker_gray {
   color: #888;
 }
